@@ -15,7 +15,7 @@
 #ifdef HAVE_PTHREAD_NP_H
 #include <pthread_np.h>
 #endif
-typedef pthread_t rb_thread_id_t;
+typedef pthread_t rb_nativethread_id_t;
 typedef pthread_mutex_t rb_nativethread_lock_t;
 
 typedef struct rb_thread_cond_struct {
