@@ -1,3 +1,10 @@
+Tue Jul 23 19:34:11 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* thread_pthread.h, thread_win32.h: rename rb_thread_id_t to
+	  rb_nativethread_id_t.
+
+	* thread_pthread.c, vm_core.h: use rb_nativethread_id_t.
+
 Tue Jul 23 18:56:11 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* ext/openssl/ossl.c: use system native (system provided)
